# Sift

./: .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  app.py  cli_mood_reader.py  config.py  data_fetcher.py  example_training_dataset.csv  flask_app.py  hn_mood_reader.py  linkedin-announcement.md  model_trainer.py  package-lock.json  pyproject.toml  requirements.txt  train.py  train_colab.ipynb
.github/workflows/: release.yml
chrome-extension/: CLAUDE.md  build.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
chrome-extension/public/: agent.html  labels.html  manifest.json  popup.css  popup.html  side-panel.html  taste.html
chrome-extension/src/agent/: agent.ts
chrome-extension/src/background/: background.ts  migrations.ts
docs/plans/: 2026-02-21-per-item-scoring-design.md  2026-02-21-per-item-scoring.md  2026-02-21-user-defined-categories.md  2026-02-22-taste-profile-impl.md  2026-02-22-taste-profile.md  2026-02-23-agent-mode-design.md  2026-02-23-agent-mode.md  2026-02-23-label-manager-design.md  2026-02-23-label-manager.md  2026-02-25-capture-screenshots-design.md  2026-02-25-capture-screenshots.md  2026-02-25-sidepanel-cache-poison-design.md  2026-02-25-sidepanel-cache-poison-implementation.md
scripts/: capture-screenshots.mjs  generate-video.mjs  validate_category_embeddings.py
src/: config.py  data_fetcher.py  hn_mood_reader.py  model_trainer.py  session_manager.py  ui.py  vibe_logic.py
templates/: error.html  index.html
video-output/: sift-demo.webm
video-screenshots/: embedding-diagram-dark.html
(+27 files in other folders)
